--- a/src/main/resources/assets/stickerbomb/lang/en_us.json
+++ b/src/main/resources/assets/stickerbomb/lang/en_us.json
@@ -1,2 +1,6 @@
 {
+	"item.stickerbomb.sticker" : "Sticker",
+	"item.stickerbomb.sticker.id": "%1$s",
+
+	"item.stickerbomb.scraper" : "Sticker Scraper"
 }
