- Add temporary stickers and admin stickers

--- a/src/main/resources/assets/stickerbomb/lang/en_us.json
+++ b/src/main/resources/assets/stickerbomb/lang/en_us.json
@@ -1,6 +1,8 @@
 {
 	"item.stickerbomb.sticker" : "Sticker",
 	"item.stickerbomb.sticker.id": "ID: %1$s",
+	"item.stickerbomb.sticker.temporary": "Temporary Sticker",
+	"item.stickerbomb.sticker.admin": "ADMIN STICKER",
 
 	"item.stickerbomb.scraper" : "Sticker Scraper"
 }
